--- a/ha-integration/custom_components/xtherma_fp/translations/en.json
+++ b/ha-integration/custom_components/xtherma_fp/translations/en.json
@@ -1,9 +1,13 @@
 {
+  "title": "Titel1",
   "config": {
     "step": {
       "user": {
+        "title": "Xtherma Fernportal",
+        "description": "Provide credentials to access Fernportal",
         "data": {
-          "api_key": "[%key:common::config_flow::data::api_key%]",
+          "api_key": "API Token",
+          "serial_number": "SN Fernportal-Module"
         }
       }
     },
