--- a/ha-integration/custom_components/xtherma_fp/translations/de.json
+++ b/ha-integration/custom_components/xtherma_fp/translations/de.json
@@ -1,5 +1,5 @@
 {
-  "title": "Titel1",
+  "title": "Xtherma Fernportal",
   "config": {
     "step": {
       "user": {
@@ -12,12 +12,11 @@
       }
     },
     "error": {
-      "cannot_connect": "[%key:common::config_flow::error::cannot_connect%]",
-      "invalid_auth": "[%key:common::config_flow::error::invalid_auth%]",
-      "unknown": "[%key:common::config_flow::error::unknown%]"
-    },
-    "abort": {
-      "already_configured": "[%key:common::config_flow::abort::already_configured_device%]"
+      "bad_arguments": "Anmeldedaten haben ein falsches Format",
+      "rate_limit": "Zu viele Anfragen an Fernportal, 1 Minute warten",
+      "timeout": "Keine Antwort",
+      "cannot_connect": "Anmeldung am Fernportal nicht möglich",
+      "unknown": "Unbekannter Fehler"
     }
   }
 }
